--- a/libs/shared-ui/src/lib/components/header/header.component.html
+++ b/libs/shared-ui/src/lib/components/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<div class="header">
+  <div class="challenge"><h2>Challenge</h2></div>
+  <div class="news-app"><h1>NWS</h1></div>
+</div>
